--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql+asyncpg://dbuser:pass123@db-postgresql:5432/test_db
+DATABASE_URL=postgresql://dbuser:pass123@db-postgresql:5432/test_db
