--- a/k8s/fastapi/fastapi-ingress.yaml
+++ b/k8s/fastapi/fastapi-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fastapi-ingress
 spec:
   rules:
-  - host: "tsadimas-fastapi.ddns.net"
+  - host: "kausonas.ddns.net"
     http:
       paths:
       - path: /
