--- a/k8s/fastapi/fastapi.env
+++ b/k8s/fastapi/fastapi.env
@@ -1,3 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://dbuser:pass123@db-postgresql:5432/test_db
+DATABASE_URL=postgresql://dbuser:pass123@db/test_db
+
 
 
